cambiate altre directory

--- a/CV/index.html
+++ b/CV/index.html
@@ -19,11 +19,11 @@
 </head>
 <body>
     <nav class="navbar-flex">
-        <a href="/personal-web-page/index.html#header" target="_blank"><strong>GB</strong></a>
+        <a href="../index.html#header" target="_blank"><strong>GB</strong></a>
         <div class="link-container">
-            <a href="/personal-web-page/index.html#about-me" target="_blank"><span class="link-style block1">About Me</span></a>
-            <a href="/personal-web-page/index.html#skills" target="_blank"><span class="link-style block1">Skills</span></a>
-            <a href="/personal-web-page/index.html#portfolio" target="_blank"><span class="link-style block1">Portfolio</span></a>
+            <a href="../index.html#about-me" target="_blank"><span class="link-style block1">About Me</span></a>
+            <a href="../index.html#skills" target="_blank"><span class="link-style block1">Skills</span></a>
+            <a href="../index.html#portfolio" target="_blank"><span class="link-style block1">Portfolio</span></a>
             <a href="mailto:biuso27@gmail.com" target="_blank"><span class="link-style block1">Contact</span></a>
             <a href="#cv"><span class="link-style block2">CV</span></a>
         </div>
