--- a/CV/index.html
+++ b/CV/index.html
@@ -30,7 +30,7 @@
         </div>
     </nav>
 
-    <main class="main-container background-overlay">
+    <main class="main-container">
         <section id="cv">
             <h1 class="special">CV</h1>
             <div class="cv-container">
@@ -74,7 +74,7 @@
             </div>
                 <div class="p-container">
                     <h1 class="special">Profilo Professionale</h1>
-                    <p>"Sono un ragazzo con esperienza nella vendita al dettaglio, nella gestione e nell'organizzazione. Durante il mio periodo come commesso, ho acquisito competenze come magazziniere e cassiere.Inoltre, ho sviluppato abilità comunicative efficaci nel rapporto con il cliente.<br> Ho buone conoscenze nella lingua inglese con cui sto riuscendo a seguire i materiali del master senza alcuna fatica.</p>
+                    <p>Sono un ragazzo con esperienza nella vendita al dettaglio, nella gestione e nell'organizzazione. Durante il mio periodo come commesso, ho acquisito competenze come magazziniere e cassiere.Inoltre, ho sviluppato abilità comunicative efficaci nel rapporto con il cliente.<br> Ho buone conoscenze nella lingua inglese con cui sto riuscendo a seguire i materiali del master senza alcuna fatica.</p>
                 </div>
                 <div class="p-container second">
                     <h1 class="special">Profilo personale</h1>
