--- a/CV/index.html
+++ b/CV/index.html
@@ -25,7 +25,7 @@
             <a href="../index.html#about-me" target="_blank"><span class="link-style block1">About Me</span></a>
             <a href="../index.html#skills" target="_blank"><span class="link-style block1">Skills</span></a>
             <a href="../index.html#portfolio" target="_blank"><span class="link-style block1">Portfolio</span></a>
-            <a href="mailto:biuso27@gmail.com" target="_blank"><span class="link-style block1">Contact</span></a>
+            <a href="../index.html#contact" target="_blank"><span class="link-style block1">Contact</span></a>
             <a href="#cv"><span class="link-style block2">CV</span></a>
         </div>
     </nav>
@@ -34,7 +34,7 @@
         <section id="cv">
             <h1 class="special">CV</h1>
             <div class="cv-container">
-                <div class="work-info">
+                <div class="work-info bg-light">
                     <h1>Works</h1>
                     <div class="line-break">
                         <h2>&#183;	Commesso</h2>
@@ -57,7 +57,7 @@
                         <span>2018</span>
                     </div>
                 </div>
-                <div class="instruction">
+                <div class="instruction bg-light">
                     <h1>Instruction</h1>
                     <div class="line-break">
                         <h2>&#183; Start2Impact</h2>
@@ -72,11 +72,11 @@
                     </div>
                 </div>
             </div>
-                <div class="p-container">
+                <div class="p-container bg-light">
                     <h1 class="special">Profilo Professionale</h1>
                     <p>Sono un ragazzo con esperienza nella vendita al dettaglio, nella gestione e nell'organizzazione. Durante il mio periodo come commesso, ho acquisito competenze come magazziniere e cassiere.Inoltre, ho sviluppato abilità comunicative efficaci nel rapporto con il cliente.<br> Ho buone conoscenze nella lingua inglese con cui sto riuscendo a seguire i materiali del master senza alcuna fatica.</p>
                 </div>
-                <div class="p-container second">
+                <div class="p-container second bg-light">
                     <h1 class="special">Profilo personale</h1>
                     <p>A scuola ho frequentato l'indirizzo audiovisivo, dove ho sviluppato le mie capacità con alcune applicazioni del pacchetto Adobe.<br>È stato anche il primo momento in cui mi sono avvicinato allo sviluppo web, anche se purtroppo non ho continuato su questa strada fino a qualche tempo fa, quando ho deciso di iscrivermi a Start2Impact.</p>
                 </div>
