--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
         />
         <meta
             property="og:image"
-            content="./src/assets/images/Screenshot.png"
+            content="src/assets/images/Screenshot.png"
         />
         <meta property="og:url" content="https://Pekko1.github.io" />
         <meta property="og:locale" content="it_IT" />
